--- a/style.css
+++ b/style.css
@@ -217,6 +217,14 @@ body {
     padding-top: 0px;
 }
 
+.animesorion{
+    font-weight: bold;
+    color: rgb(254, 102, 0);
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding-top: 0px;
+}
+
 a>p:hover{
     text-decoration: underline 
 }
